@@ -1,0 +1,5 @@
+let x: number = 10;
+let y: number = 5;
+let z: number = (x + y);
+
+log.writeln(z);
